--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 <div class="education-box">
                     <div class="education-content">
                         <div class="content">
-                            <div class="year"><a href="https://adii1998.github.io/My_Portfolio/"><i class='bx bx-link'></i> </a>2021</div>
+                            <div class="year"><a href="https://adii1998.github.io/Candy/"><i class='bx bx-link'></i> </a>2021</div>
                             <h3>Museam Of Candy</h3>
                             <p> Welcome to Museum of Candy,Where colossal candyfloss constructions meld with a tantalizing taffy twistedness!</p>
                         </div>
