--- a/index.html
+++ b/index.html
@@ -68,7 +68,15 @@
         
        <div class="about-content">
        <h3>Frontend Developer! <!-- <span class="animate scroll" style="--i:3;"></span>--></h3> 
-        <p>Switching from a BCom background to becoming a frontend developer can be a rewarding and exciting career transition. As a frontend developer, I'll be responsible for creating the user interface and user experience of websites and web applications. While my previous education in commerce may seem unrelated, it can provide a unique perspective and valuable skills that can complement my new role.
+        <p>Switching from a BCom background to becoming a frontend developer can be a rewarding and exciting career transition. 
+            As a frontend developer, I'll be responsible for creating the user interface and user experience of websites and web applications. 
+            While my previous education in commerce may seem unrelated, it can provide a unique perspective and valuable skills that can complement my new role.
+            <!-- Embarking on a transition from a BCom background to the realm of frontend development offers a remarkable and exhilarating career shift. As a frontend developer, 
+            your role extends beyond the mere creation of interfaces – you are a digital storyteller, shaping the narrative of online interactions. 
+            This narrative power, coupled with your commerce education, sets the stage for an extraordinary fusion of skills and insights.
+            Your BCom foundation instills a profound understanding of consumer behavior, market trends, and the intricate dance of supply and demand. 
+            This knowledge enriches your approach as a frontend developer, enabling you to curate interfaces that resonate with users on a deeper level. 
+            You possess the innate ability to empathize with the end-users' needs and desires, transforming them into captivating visuals and intuitive layouts that not only delight but also drive engagement. -->
             <!-- <span class="animate scroll" style="--i:4;"></span> -->
         </p>
         <div class="btn-box btns">
@@ -153,7 +161,7 @@
                 <div class="education-box">
                     <div class="education-content">
                         <div class="content">
-                            <div class="year"><a href="https://adii1998.github.io/Candy/"><i class='bx bx-link'></i> </a>2021</div>
+                            <div class="year"><a href="https://adii1998.github.io/Candy/"><i class='bx bx-link'></i> </a>2023</div>
                             <h3>Museam Of Candy</h3>
                             <p> Welcome to Museum of Candy,Where colossal candyfloss constructions meld with a tantalizing taffy twistedness!</p>
                         </div>
@@ -161,7 +169,7 @@
 
                     <div class="education-content">
                         <div class="content">
-                            <div class="year"><a href="https://adii1998.github.io/Movie_Deck_review/"><i class='bx bx-link'></i></a> 2022</div>
+                            <div class="year"><a href="https://adii1998.github.io/Movie_Deck_review/"><i class='bx bx-link'></i></a> 2023</div>
                             <h3>Movie Deck</h3>
                             <p>Your Film Companion! Experience the power of ratings and rankings at CineViewers. Browse through diverse movie reviews, sort them from least to most rated, and find your next cinematic gem. Personalize your watchlist with the favorite function, keeping track of must-see films.</p>
                         </div>
@@ -169,7 +177,7 @@
 
                     <div class="education-content">
                         <div class="content">
-                            <div class="year"><i class='bx bx-link'></i>2023</div>
+                            <div class="year"><a href="https://adii1998.github.io/Spotify_Landing_Page/"><i class='bx bx-link'></i></a>2023</div>
                             <h3>Spotify Landing Page</h3>
                             <p>Spotify has built a simple, yet eye-catching and effective landing page for its Premium service. The page combines an emotional feeling with urgency deadline up front, before providing clear, logical reasons to purchase.</p>
                         </div>
@@ -184,7 +192,7 @@
                 <div class="education-box">
                     <div class="education-content">
                         <div class="content">
-                            <div class="year"><box-icon name='calendar' type='solid' > 2021</box-icon></div>
+                            <div class="year"><box-icon name='calendar' type='solid' > 2023</box-icon></div>
                             <h3>Museam Of Candy</h3>
                             <p> Welcome to Museum of Candy,Where colossal candyfloss constructions meld with a tantalizing taffy twistedness!</p>
                         </div>
@@ -192,7 +200,7 @@
 
                     <div class="education-content">
                         <div class="content">
-                            <div class="year"><box-icon name='calendar' type='solid' > 2022</box-icon></div>
+                            <div class="year"><box-icon name='calendar' type='solid' > 2023</box-icon></div>
                             <h3>Movie Deck</h3>
                             <p>Your Film Companion! Experience the power of ratings and rankings at CineViewers. Browse through diverse movie reviews, sort them from least to most rated, and find your next cinematic gem. Personalize your watchlist with the favorite function, keeping track of must-see films.</p>
                         </div>
