--- a/index.html
+++ b/index.html
@@ -257,13 +257,13 @@
         <footer class="footer">
             <div class="footer-text">
                 <p>Copyright &copy; 2023 by Aditya | All Rights Reserved.</p>
-<!-- 
-                <span class="animate scroll" style="--i:1;"></span> -->
+
+                <span class="animate scroll" style="--i:1;"></span> 
             </div>
 
             <div class="footer-iconTop">
                 <a href="#"><i class='bx bx-up-arrow-alt' ></i></a>
-                <!-- <span class="animate scroll" style="--i:3;"></span> -->
+                <span class="animate scroll" style="--i:3;"></span>
             </div>
         </footer>
         <script src="script.js"></script>
