--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
            
            <div class="btn-box">
             <a href="#contact" class="btn">Hire Me</a>
-            <a href="#about" class="btn" >Let's Talk</a>
+            <a href="/Aditya_Purohit_Resume_.pdf" class="btn" >Download CV</a>
             <span class="animate" style="--i:4;"></span>
            </div>
        </div>
