--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
            
            <div class="btn-box">
             <a href="#contact" class="btn">Hire Me</a>
-            <a href="/Aditya_Purohit_Resume_.pdf" class="btn" >Download CV</a>
+            <a href="/Aditya_Resume.pdf" class="btn" >Download CV</a>
             <span class="animate" style="--i:4;"></span>
            </div>
        </div>
@@ -67,11 +67,11 @@
         
        <div class="about-content">
         <h3>Frontend Developer!<span class="animate scroll" style="--i:3;"></span></h3>
-        <p>Switching from a BCom background to becoming a frontend developer can be a rewarding and exciting career transition. As a frontend developer, I'll be responsible for creating the user interface and user experience of websites and web applications. While my previous education in commerce may seem unrelated, it can provide a unique perspective and valuable skills that can complement my new role.
+        <p >Switching from a BCom background to becoming a frontend developer can be a rewarding and exciting career transition. As a frontend developer, I'll be responsible for creating the user interface and user experience of websites and web applications. While my previous education in commerce may seem unrelated, it can provide a unique perspective and valuable skills that can complement my new role.
             <span class="animate scroll" style="--i:4;"></span>
         </p>
         <div class="btn-box btns">
-            <a href="#" class="btn">Read More</a>
+            <a class="btn">Read More</a>
             <span class="animate scroll" style="--i:5;"></span>
         </div>
        </div>
