--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
            
            <div class="btn-box">
             <a href="#contact" class="btn">Hire Me</a>
-            <a href="Aditya_Resume.pdf" class="btn" >Download CV</a>
+            <a href="https://raw.githubusercontent.com/adii1998/My_Portfolio/main/Aditya_Resume.pdf" class="btn" >Download CV</a>
             <span class="animate" style="--i:4;"></span>
            </div>
        </div>
